--- a/lpv2/styles/style.css
+++ b/lpv2/styles/style.css
@@ -334,7 +334,7 @@ body {
   justify-content: center;
   width: 171px;
   height: 48px;
-  background: #54146a;
+  background: #ff0049;
   border-radius: 61.783px;
   font-weight: 400;
   font-size: 22px;
@@ -906,6 +906,28 @@ body {
     margin-bottom: 55px;
   }
 
+  .promo__image:before {
+    content: "";
+    width: 104px;
+    height: 120px;
+    background-image: url(../images/promo-coins-left-mob.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: -61px;
+    left: -84px;
+  }
+
+  .promo__image:after {
+    content: "";
+    width: 89px;
+    height: 113px;
+    background-image: url(../images/promo-coins-right-mob.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: -153px;
+    right: -24px;
+  }
+
   .promo__text {
     padding: 0 19px;
     margin-bottom: -56px;
@@ -1268,12 +1290,24 @@ body {
   }
 
   .games__slots_topImg {
+    position: relative;
     margin: 0 auto;
     margin-bottom: -5px;
   }
   .games__slots_topImg img {
     max-width: fit-content;
     transform: translateY(-13px);
+  }
+
+  .games__slots_topImg:before {
+    content: "";
+    width: 52px;
+    height: 56px;
+    background-image: url(../images/slots_coin_left_mob.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: -61px;
+    left: -10px;
   }
 
   .games__slots_bg {
