--- a/lpv1/styles/style.css
+++ b/lpv1/styles/style.css
@@ -334,7 +334,7 @@ body {
   justify-content: center;
   width: 171px;
   height: 48px;
-  background: #54146a;
+  background: #ff0049;
   border-radius: 61.783px;
   font-weight: 400;
   font-size: 22px;
