--- a/lpv3_top_buttons/styles/style.css
+++ b/lpv3_top_buttons/styles/style.css
@@ -756,5 +756,242 @@ body {
     padding: 0 4px;
   }
 }
+/* NEW STYLES - FOOTER */
 
-/** promo */
+.footer {
+  background-color: #fff;
+  padding-top: 61px;
+}
+
+.footer__logos {
+  overflow: hidden;
+  margin-bottom: 71px;
+}
+
+.footer__top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 894px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 71px;
+  font-size: 16px;
+  line-height: 160%;
+  color: #000;
+}
+
+.footer__top img {
+  margin-bottom: 51px;
+}
+
+.footer__logos img {
+  width: 1705px;
+  max-width: 1705px;
+  margin-left: calc(50% - 854px);
+}
+
+.footer__bottom {
+  display: inline-flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  gap: 52px;
+  padding: 63px 0;
+}
+
+.footer__info {
+  display: flex;
+  gap: 64px;
+}
+
+.footer__links {
+  display: flex;
+  gap: 64px;
+}
+
+.footer__info-operator {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  gap: 14px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  text-transform: capitalize;
+  padding-top: 22px;
+}
+
+.footer__info-operator img {
+  margin: 0 auto;
+}
+
+.footer__info-age {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 103px;
+  height: 103px;
+  border: 3px solid #000;
+  border-radius: 100px;
+  text-align: center;
+  text-transform: capitalize;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 100%;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: row;
+  gap: 75px;
+}
+
+.footer__links-section {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer__links-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: capitalize;
+  color: #000;
+}
+
+.footer__links-link {
+  font-size: 16px;
+  color: #000;
+  text-decoration: underline;
+}
+
+.footer__links-link:hover {
+  text-decoration: none;
+}
+
+.footer__line {
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+}
+
+.footer__container {
+  padding: 0;
+}
+
+@media (min-width: 1200px) {
+  .footer__bottom {
+    padding-right: 35px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .footer__logos {
+    margin-bottom: 57px;
+  }
+
+  .footer__top {
+    max-width: 690px;
+    margin-bottom: 61px;
+  }
+
+  .footer__top img {
+    margin-bottom: 44px;
+  }
+
+  .footer__bottom {
+    gap: 24px;
+    padding: 55px 0;
+  }
+
+  .footer__info {
+    gap: 33px;
+    position: relative;
+    top: -8px;
+  }
+
+  .footer__links {
+    gap: 40px;
+  }
+
+  .footer__info-operator {
+    padding-top: 0;
+  }
+
+  .footer__links-title {
+    margin-bottom: 8px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer__line {
+    max-width: 308px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer__logos {
+    display: none;
+  }
+
+  .footer__top img {
+    width: 151px;
+    margin-bottom: 19px;
+  }
+
+  .footer {
+    padding-top: 41px;
+  }
+
+  .footer__top {
+    max-width: 318px;
+    margin-bottom: 28px;
+  }
+
+  .footer__bottom {
+    display: flex;
+    flex-wrap: nowrap;
+    max-width: 340px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 0;
+    gap: 7px;
+  }
+
+  .footer__info {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    position: relative;
+    top: -17px;
+    min-width: 145px;
+    gap: 44px;
+  }
+
+  .footer__links {
+    flex-wrap: wrap;
+    gap: 18px;
+  }
+
+  .footer__info-operator img {
+    width: 105px;
+  }
+
+  .footer__links-title {
+    margin-bottom: 8px;
+  }
+
+  .footer__links-section:last-child {
+    margin-top: 21px;
+  }
+
+  .footer__info-operator {
+    padding-top: 0;
+  }
+}
